/*
 * Copyright and related rights waived via CC0
 *
 * You should have received a copy of the CC0 legalcode along with this
 * work. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
 */
plugins {
    id "org.graalvm.internal.tck"
}

String libraryVersion = tck.testedLibraryVersion.get()
Provider<Directory> generatedSourcesDir = layout.buildDirectory.dir("generated/accessors-smart-sources")
Provider<Directory> compiledClassesDir = layout.buildDirectory.dir("classes/accessors-smart")

configurations {
    accessorsSmartSources {
        transitive = false
    }
    accessorsSmartCompileClasspath
}

def unpackAccessorsSmartSources = tasks.register("unpackAccessorsSmartSources", Sync) {
    from({ zipTree(configurations.accessorsSmartSources.singleFile) })
    into generatedSourcesDir
}

def compileAccessorsSmartSources = tasks.register("compileAccessorsSmartSources", JavaCompile) {
    dependsOn unpackAccessorsSmartSources
    source generatedSourcesDir
    classpath = configurations.accessorsSmartCompileClasspath
    destinationDirectory = compiledClassesDir
    options.release = 8
}

def accessorsSmartJar = tasks.register("accessorsSmartJar", Jar) {
    dependsOn compileAccessorsSmartSources
    from compiledClassesDir
    archiveClassifier = "accessors-smart"
}

FileCollection accessorsSmartJarFiles = files(accessorsSmartJar.flatMap { it.archiveFile })
accessorsSmartJarFiles.builtBy accessorsSmartJar

dependencies {
    accessorsSmartSources "net.minidev:accessors-smart:$libraryVersion:sources"
    accessorsSmartCompileClasspath 'org.ow2.asm:asm:8.0.1'
    testImplementation accessorsSmartJarFiles
    testImplementation 'org.ow2.asm:asm:8.0.1'
    testImplementation 'org.assertj:assertj-core:3.22.0'
}

tasks.withType(Test).configureEach {
    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
}

graalvmNative {
    agent {
        defaultMode = "conditional"
        modes {
            conditional {
                userCodeFilterPath = "user-code-filter.json"
            }
        }
    }
}
